
syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "options.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

enum ExampleType {
    UNKNOWN = 0;
    TYPE1 = 1;
    TYPE2 = 2;
    TYPE3 = 3;
  }