syntax = "proto3";

import "example.proto";
import "options.proto";
package pydantic_example;
message Example2 {
    ExampleType type = 1[(pydantic.field) = {description: "Type of the example",default: "ExampleType.TYPE1"}];
    
}